syntax = "proto3";

package dhpcs.liquidity.ws.protocol;

option java_package = "com.dhpcs.liquidity.proto.ws.protocol";

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

import "dhpcs/liquidity/model.proto";

message ClientMessage {
    message KeyOwnershipChallenge {
        bytes nonce = 1;
    }
    message Command {
        int64 correlation_id = 1;
        oneof command {
            bytes ping_command = 2;
        }
    }
    message Response {
        int64 correlation_id = 1;
        oneof response {
            ZoneResponse zone_response = 2;
        }
    }
    message Notification {
        message ZoneNotificationEnvelope {
            string zone_id = 1;
            ZoneNotification zone_notification = 2;
        }
        oneof notification {
            ZoneNotificationEnvelope zone_notification_envelope = 1;
        }
    }
    oneof message {
        KeyOwnershipChallenge key_ownership_challenge = 1;
        Command command = 2;
        Response response = 3;
        Notification notification = 4;
    }
}

message ServerMessage {
    message KeyOwnershipProof {
        bytes public_key = 1;
        bytes signature = 2;
    }
    message Command {
        message ZoneCommandEnvelope {
            string zone_id = 1;
            ZoneCommand zone_command = 2;
        }
        int64 correlation_id = 1;
        oneof command {
            ZoneCommandEnvelope zone_command_envelope = 2;
            ZoneCommand.CreateZoneCommand create_zone_command = 3;
        }
    }
    message Response {
        int64 correlation_id = 1;
        oneof response {
            bytes ping_response = 2;
        }
    }
    oneof message {
        KeyOwnershipProof key_ownership_proof = 1;
        Command command = 2;
        Response response = 3;
    }
}

message ZoneCommand {
    message CreateZoneCommand {
        bytes equity_owner_public_key = 1;
        google.protobuf.StringValue equity_owner_name = 2;
        google.protobuf.Struct equity_owner_metadata = 3;
        google.protobuf.StringValue equity_account_name = 4;
        google.protobuf.Struct equity_account_metadata = 5;
        google.protobuf.StringValue name = 6;
        google.protobuf.Struct metadata = 7;
    }
    message ChangeZoneNameCommand {
        google.protobuf.StringValue name = 1;
    }
    message CreateMemberCommand {
        repeated bytes owner_public_keys = 1;
        google.protobuf.StringValue name = 2;
        google.protobuf.Struct metadata = 3;
    }
    message UpdateMemberCommand {
        dhpcs.liquidity.model.Member member = 1;
    }
    message CreateAccountCommand {
        repeated string owner_member_ids = 1;
        google.protobuf.StringValue name = 2;
        google.protobuf.Struct metadata = 3;
    }
    message UpdateAccountCommand {
        string acting_as = 1;
        dhpcs.liquidity.model.Account account = 2;
    }
    message AddTransactionCommand {
        string acting_as = 1;
        string from = 2;
        string to = 3;
        string value = 4;
        google.protobuf.StringValue description = 5;
        google.protobuf.Struct metadata = 6;
    }
    oneof zone_command {
        CreateZoneCommand create_zone_command = 1;
        bytes join_zone_command = 2;
        bytes quit_zone_command = 3;
        ChangeZoneNameCommand change_zone_name_command = 4;
        CreateMemberCommand create_member_command = 5;
        UpdateMemberCommand update_member_command = 6;
        CreateAccountCommand create_account_command = 7;
        UpdateAccountCommand update_account_command = 8;
        AddTransactionCommand add_transaction_command = 9;
    }
}

message ZoneResponse {
    message Errors {
        message Error {
            int32 code = 1;
            string description = 2;
        }
        repeated Error errors = 1;
    }
    message CreateZoneResponse {
        message Success {
            dhpcs.liquidity.model.Zone zone = 1;
        }
        oneof result {
            Errors errors = 1;
            Success success = 2;
        }
    }
    message JoinZoneResponse {
        message Success {
            dhpcs.liquidity.model.Zone zone = 1;
            map<string, bytes> connected_clients = 2;
        }
        oneof result {
            Errors errors = 1;
            Success success = 2;
        }
    }
    message QuitZoneResponse {
        oneof result {
            Errors errors = 1;
            bytes success = 2;
        }
    }
    message ChangeZoneNameResponse {
        oneof result {
            Errors errors = 1;
            bytes success = 2;
        }
    }
    message CreateMemberResponse {
        message Success {
            dhpcs.liquidity.model.Member member = 1;
        }
        oneof result {
            Errors errors = 1;
            Success success = 2;
        }
    }
    message UpdateMemberResponse {
        oneof result {
            Errors errors = 1;
            bytes success = 2;
        }
    }
    message CreateAccountResponse {
        message Success {
            dhpcs.liquidity.model.Account account = 1;
        }
        oneof result {
            Errors errors = 1;
            Success success = 2;
        }
    }
    message UpdateAccountResponse {
        oneof result {
            Errors errors = 1;
            bytes success = 2;
        }
    }
    message AddTransactionResponse {
        message Success {
            dhpcs.liquidity.model.Transaction transaction = 1;
        }
        oneof result {
            Errors errors = 1;
            Success success = 2;
        }
    }
    oneof zone_response {
        CreateZoneResponse create_zone_response = 1;
        JoinZoneResponse join_zone_response = 2;
        QuitZoneResponse quit_zone_response = 3;
        ChangeZoneNameResponse change_zone_name_response = 4;
        CreateMemberResponse create_member_response = 5;
        UpdateMemberResponse update_member_response = 6;
        CreateAccountResponse create_account_response = 7;
        UpdateAccountResponse update_account_response = 8;
        AddTransactionResponse add_transaction_response = 9;
    }
}

message ZoneNotification {
    message ClientJoinedZoneNotification {
        string connection_id = 1;
        bytes public_key = 2;
    }
    message ClientQuitZoneNotification {
        string connection_id = 1;
        bytes public_key = 2;
    }
    message ZoneNameChangedNotification {
        google.protobuf.StringValue name = 1;
    }
    message MemberCreatedNotification {
        dhpcs.liquidity.model.Member member = 1;
    }
    message MemberUpdatedNotification {
        dhpcs.liquidity.model.Member member = 1;
    }
    message AccountCreatedNotification {
        dhpcs.liquidity.model.Account account = 1;
    }
    message AccountUpdatedNotification {
        string acting_as = 1;
        dhpcs.liquidity.model.Account account = 2;
    }
    message TransactionAddedNotification {
        dhpcs.liquidity.model.Transaction transaction = 1;
    }
    oneof zone_notification {
        ClientJoinedZoneNotification client_joined_zone_notification = 1;
        ClientQuitZoneNotification client_quit_zone_notification = 2;
        ZoneNameChangedNotification zone_name_changed_notification = 3;
        MemberCreatedNotification member_created_notification = 4;
        MemberUpdatedNotification member_updated_notification = 5;
        AccountCreatedNotification account_created_notification = 6;
        AccountUpdatedNotification account_updated_notification = 7;
        TransactionAddedNotification transaction_added_notification = 8;
    }
}
